Attempted to get voting to work.

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,8 @@
     <!-- Include Django messages here -->
 
     <script src="{% static 'js/scripts.js' %}"></script>
+    {% block scripts %}
+    {% endblock %}
 
 </body>
 </html>
