--- a/forum/templates/forum/view_thread.html
+++ b/forum/templates/forum/view_thread.html
@@ -14,6 +14,10 @@
             <div class="response">
                 <p>{{ response.content }}</p>
                 <p>Posted by {{ response.author }} on {{ response.created_at }}</p>
+                
+                <!-- Upvote and downvote buttons -->
+                <button class="upvote-btn{% if request.user.is_authenticated and request.user in response.upvoted_by.all %} voted{% endif %}" data-response-id="{{ response.id }}" data-vote-type="upvote">Upvote ({{ response.upvotes }})</button>
+                <button class="downvote-btn{% if request.user.is_authenticated and request.user in response.downvoted_by.all %} voted{% endif %}" data-response-id="{{ response.id }}" data-vote-type="downvote">Downvote ({{ response.downvotes }})</button>
             </div>
         {% endfor %}
     </div>
@@ -29,6 +33,7 @@
     {% else %}
         <p><a href="{% url 'login' %}">Log in</a> to post a response.</p>
     {% endif %}
-
+    
     <a href="{% url 'forum:thread_list' %}">Back to Thread List</a>
+</div>
 {% endblock %}
