--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <div class="navbar">
         <div class="container">
             <a href="{% url 'home' %}">Home</a>
-            <a href="{% url 'blog' %}">Blog</a>
+            <a href="{% url 'blog:post_list' %}">Blog</a>
             <a href="{% url 'forum:thread_list' %}">Forum</a>
             {% if thread %}
                 <!-- Link to the original thread if viewing a post -->
