--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -11,5 +11,5 @@
   <p>Keywords: {{ blog_post.keywords }}</p>
   <p>Author: {{ blog_post.author }}</p>
   <p>Date Published: {{ blog_post.date_published }}</p>
-  <a href="{% url 'blog_list' %}">Back to Blog List</a>
+  <a href="{% url 'blog:blog_list' %}">Back to Blog List</a>
 {% endblock %}
