--- a/forum/templates/forum/create_thread.html
+++ b/forum/templates/forum/create_thread.html
@@ -7,9 +7,20 @@
 
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Post Thread</button>
+            <div class="form-group row">
+                <label for="{{ form.title.id_for_label }}" class="col-sm-2 col-form-label">Title:</label>
+                {{ form.title }}
+            </div>
+            <div class="form-group row">
+                <label for="{{ form.content.id_for_label }}" class="col-sm-2 col-form-label">Content:</label>
+                {{ form.content }}
+            </div>
+            <div class="form-group row">
+                <button type="submit" class="btn btn-primary">Create Thread</button>
+            </div>
     </form>
 
-    <a href="{% url 'forum:thread_list' %}">Back to Thread List</a>
+<a href="{% url 'forum:thread_list' %}">Back to Thread List</a>
+
 {% endblock %}
+
