--- a/templates/base.html
+++ b/templates/base.html
@@ -5,43 +5,67 @@
 <html>
 <head>
     <title>Solar Power</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 </head>
 <body>
-    <div class="navbar">
-        <div class="container">
-            <a href="{% url 'home' %}">Home</a>
-            <a href="{% url 'blog:blog_list' %}">Blog</a>
-            <a href="{% url 'forum:thread_list' %}">Forum</a>
-            {% if thread %}
-                <!-- Link to the original thread if viewing a post -->
-                <a href="{% url 'forum:view_thread' thread.id %}">Back to Original Thread</a>
-            {% endif %}
-            <a href="{% url 'calculator' %}">Calculators</a>
-            <!-- Add user profile dropdown to the far right -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Solar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'home' %}">Home</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'blog:blog_list' %}">Blog</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'forum:thread_list' %}">Forum</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'calculator' %}">Calculators</a>
+            </li>
             {% if user.is_authenticated %}
-                <!-- Dropdown for logged-in users -->
-                <div class="dropdown" style="float: right;">
-                    <button class="dropbtn">{{ request.user.username }}</button>
-                    <div class="dropdown-content">
-                        <a href="{% url 'user_profile' %}">Profile</a>
-                        <a href="{% url 'logout' %}">Logout</a>
-                        <!-- Add more dropdown items as needed -->
-                    </div>
-                </div>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                {{ request.user.username }}
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Messages</a>
+                <a class="dropdown-item" href="{% url 'user_profile' %}">Profile</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+              </div>
+            </li>
             {% else %}
-                <!-- Link to login for users who are not logged in -->
-                <a href="{% url 'login' %}" style="float: right;">Login</a>
-                <a href="{% url 'register' %}" style="float: right;">Register</a>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">Login</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'register' %}">Register</a>
+            </li>
             {% endif %}
+          </ul>
+          <form class="form-inline ms-auto flex-nowrap" style="display: flex; align-items: center;">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
         </div>
-    </div>
+      </nav>
+
     <div class="container">
         {% block content %}
         {% endblock %}
     </div>
     <!-- Include Django messages here -->
 
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="{% static 'js/scripts.js' %}"></script>
     {% block scripts %}
     {% endblock %}
