--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -3,14 +3,40 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="container my-5">
   <h1>Blog</h1>
-  <ul>
-    {% for blog_post in blog_posts %}
-      <li>
-        <a href="{% url 'blog:blog_detail' pk=blog_post.pk %}">{{ blog_post.title }}</a>
-        <p>{{ blog_post.date_published }}</p>
-      </li>
-    {% endfor %}
-  </ul>
+    <div class="row mb-2">
+      {% for blog_post in blog_posts %}
+      <div class="col-md-6">
+        <div class="card mb-3">
+          <div class="card-body">
+            <h5 class="card-title">{{ blog_post.title }}</h5>
+              <p class="card-text">{{ blog_post.date_published }}</p>
+              <a href="{% url 'blog:blog_detail' blog_post.id %}" class="btn btn-primary">Read More</a>
+          </div>
+        </div>            
+      </div>
+      {% endfor %}
+    </div>
+
+    <div class="pagination">
+      <span class="step-links">
+          {% if blog_posts.has_previous %}
+              <a href="?page=1">&laquo; first</a>
+              <a href="?page={{ blog_posts.previous_page_number }}">previous</a>
+          {% endif %}
+          
+          <span class="current-page">
+              Page {{ blog_posts.number }} of {{ blog_posts.paginator.num_pages }}.
+          </span>
+          
+          {% if blog_posts.has_next %}
+              <a href="?page={{ blog_posts.next_page_number }}">next</a>
+              <a href="?page={{ blog_posts.paginator.num_pages }}">last &raquo;</a>
+          {% endif %}
+      </span>
+  </div>
+
   <a href="{% url 'blog:create_blog_post' %}">Create a new blog post</a>
+</div>
 {% endblock %}
