--- a/templates/base.html
+++ b/templates/base.html
@@ -19,14 +19,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item{% if active_page == 'blog' %} active{% endif %}">
-              <a class="nav-link" href="{% url 'blog:blog_list' %}">Blog</a>
-            </li>
-            <li class="nav-item{% if active_page == 'forum' %} active{% endif %}">
-              <a class="nav-link" href="{% url 'forum:thread_list' %}">Forum</a>
+            <li class="nav-item">
+              <a class="nav-link{% if active_page == 'blog' %} active{% endif %}" href="{% url 'blog:blog_list' %}">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'calculator' %}">Calculators</a>
+              <a class="nav-link{% if active_page == 'forum' %} active{% endif %}" href="{% url 'forum:thread_list' %}">Forum</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link{% if active_page == 'calculator' %} active{% endif %}" href="{% url 'calculator' %}">Calculators</a>
             </li>
             {% if user.is_authenticated %}
             <li class="nav-item dropdown">
