--- a/forum/templates/forum/thread_list.html
+++ b/forum/templates/forum/thread_list.html
@@ -44,7 +44,7 @@
     {% endfor %}
     
     {% if user.is_authenticated %}
-      <a href="{% url 'forum:create_thread' %}" class="btn btn-primary mt-3">Create New Thread</a>
+      <a href="{% url 'forum:create_thread' %}" class="btn mt-3">Create New Thread</a>
     {% endif %}
   </div>
 {% endblock %}
