--- a/forum/templates/forum/create_thread.html
+++ b/forum/templates/forum/create_thread.html
@@ -16,7 +16,11 @@
                 {{ form.content }}
             </div>
             <div class="form-group row">
-                <button type="submit" class="btn btn-primary">Create Thread</button>
+                <label for="{{ form.category.id_for_label }}" class="col-sm-2 col-form-label">Category:</label>
+                {{ form.category }}
+            </div>
+            <div class="form-group row">
+                <button type="submit" class="btn">Create Thread</button>
             </div>
     </form>
 
