--- a/forum/templates/forum/view_thread.html
+++ b/forum/templates/forum/view_thread.html
@@ -16,7 +16,7 @@
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="btn btn-primary">Submit Response</button>
+            <button type="submit" class="btn">Submit Response</button>
         </form>        
         <hr>
         <ul class="replies">
