--- a/templates/base.html
+++ b/templates/base.html
@@ -89,12 +89,12 @@
         {% endblock %}
     </div>
 
-    <!-- Optional: Footer Section -->
-    <footer class="text-white text-center py-3 mt-5">
+    <!-- Footer Section -->
+    <footer class="text-white text-center py-3 mt-5 sticky-footer">
       <p>&copy; 2023 Blog Name. All rights reserved.</p>
     </footer>
 
-
+    <!-- Javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="{% static 'js/scripts.js' %}"></script>
     {% block scripts %}
