--- a/templates/base.html
+++ b/templates/base.html
@@ -32,8 +32,11 @@
             <li class="nav-item">
               <a class="nav-link{% if active_page == 'forum' %} active{% endif %}" href="{% url 'forum:thread_list' %}">Forum</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link{% if active_page == 'calculator' %} active{% endif %}" href="{% url 'calculator' %}">Calculators</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Calculators</a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="{% url 'calculators:solar_savings_calculator' %}">Solar Savings</a></li>
+              </ul>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
@@ -91,12 +94,14 @@
 
     <!-- Footer Section -->
     <footer class="text-white text-center py-3 mt-5 sticky-footer">
-      <p>&copy; 2023 Blog Name. All rights reserved.</p>
+      <p>&copy; 2023 Solar Education Site. All rights reserved.</p>
     </footer>
 
     <!-- Javascript -->
+    <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="{% static 'js/scripts.js' %}"></script>
+
     {% block scripts %}
     {% endblock %}
 
